# Deskulpt

./: .gitignore  .knip.json  .lintstagedrc.js  .oxlintrc.json  .prettierignore  .taplo.toml  Cargo.toml  LICENSE  README-branch.md  README.md  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  post-vite-build.sh  rustfmt.toml  tsconfig.json  tsconfig.widget-api.json  typedoc.config.js  vite.config.ts
crates/deskulpt/: Cargo.toml  README.md  build.rs  tauri.conf.json  windows-manifest.xml
crates/deskulpt-build/: Cargo.toml  README.md
crates/deskulpt-build/src/: lib.rs
crates/deskulpt-bundler/: Cargo.toml  README.md
crates/deskulpt-bundler/src/: common.rs  lib.rs  transforms.rs
crates/deskulpt-common/: Cargo.toml  README.md
crates/deskulpt-common/src/: bindings.rs  event.rs  init.rs  lib.rs  outcome.rs  window.rs
crates/deskulpt-config/: Cargo.toml  README.md
crates/deskulpt-config/src/: lib.rs
crates/deskulpt-core/: Cargo.toml  README.md  build.rs
crates/deskulpt-core/src/: bundler.rs  config.rs  events.rs  lib.rs  path.rs  persistence.rs  settings.rs  shortcuts.rs  tray.rs  widgets_protocol.rs  window.rs
crates/deskulpt-core/src/_bundler/: transforms.rs
crates/deskulpt-core/src/apis/: mod.rs
crates/deskulpt-core/src/apis/fs/: apis.rs  mod.rs  utils.rs
crates/deskulpt-core/src/apis/sys/: apis.rs  mod.rs
crates/deskulpt-core/src/bundler/: alias.rs  common.rs  mod.rs  telemetry.rs  transforms.rs
crates/deskulpt-core/src/commands/: bundle_widget.rs  bundle_widgets.rs  call_plugin.rs  create_widget_webview.rs  create_widget_window.rs  emit_on_render_ready.rs  error.rs  exit_app.rs  load_settings.rs  load_widgets.rs  mark_setup.rs  mod.rs  open_in_widgets_dir.rs  open_widget.rs  rescan_widgets.rs  set_render_ready.rs  update_settings.rs  update_shortcut.rs  update_shortcuts.rs  update_toggle_shortcut.rs  window_ready.rs
crates/deskulpt-core/src/dependencies/: install.rs  mod.rs
crates/deskulpt-core/src/settings/: mod.rs  persistence.rs  shortcuts.rs
crates/deskulpt-core/src/states/: canvas_click_through.rs  canvas_imode.rs  initial_render.rs  mod.rs  package_manager.rs  render_ready.rs  settings.rs  setup.rs  widget_catalog.rs  widget_collection.rs  widget_config_map.rs  widgets.rs  window_ready.rs
crates/deskulpt-core/src/widgets/: config.rs  mod.rs
crates/deskulpt-core/src/window/: canvas.js  init.js  manager.js  mod.rs  script.rs
crates/deskulpt-events/: Cargo.toml  README.md
crates/deskulpt-events/src/: lib.rs
crates/deskulpt-macros/: Cargo.toml  README.md
crates/deskulpt-macros/src/: deskulpt_event.rs  event.rs  events.rs  lib.rs  persistence.rs
crates/deskulpt-plugin/: Cargo.toml  README.md
crates/deskulpt-plugin-fs/: Cargo.toml  README.md  build.rs
crates/deskulpt-plugin-fs/src/: apis.rs  commands.rs  lib.rs  utils.rs
crates/deskulpt-plugin-fs/src/commands/: append_file.rs  create_dir.rs  exists.rs  is_dir.rs  is_file.rs  mod.rs  read_file.rs  remove_dir.rs  remove_file.rs  write_file.rs
crates/deskulpt-plugin-macros/: Cargo.toml  README.md
crates/deskulpt-plugin-macros/src/: dispatch.rs  lib.rs
crates/deskulpt-plugin-sys/: Cargo.toml  README.md
crates/deskulpt-plugin-sys/src/: apis.rs  lib.rs
crates/deskulpt-plugin-sys/src/commands/: get_system_info.rs  mod.rs
crates/deskulpt-plugin/src/: command.rs  interface.rs  lib.rs
crates/deskulpt-settings/: Cargo.toml  README.md
crates/deskulpt-settings/src/: lib.rs
crates/deskulpt-specta/: Cargo.toml  README.md
crates/deskulpt-specta/src/: bindings.ts.hbs  error.rs  lib.rs  template.rs
crates/deskulpt-states/: Cargo.toml  README.md
crates/deskulpt-states/src/: lib.rs
crates/deskulpt-testing/: Cargo.toml  README.md
crates/deskulpt-testing/src/: assert.rs  lib.rs  mock.rs
crates/deskulpt-utils/: Cargo.toml  README.md
crates/deskulpt-utils/src/: lib.rs
crates/deskulpt-workspace/: Cargo.toml  README.md
crates/deskulpt-workspace/src/: lib.rs
crates/deskulpt/capabilities/: canvas.json  manager.json  widgets.json
crates/deskulpt/permissions/apis-fs/: default.toml
crates/deskulpt/permissions/autogenerated/: bundle_widget.toml  exit_app.toml  init_global_setting.toml  load_settings.toml  open_in_widgets_dir.toml  refresh_widget_collection.toml  register_toggle_shortcut.toml  rescan_widgets.toml  update_toggle_shortcut.toml
crates/deskulpt/src/: commands.rs  lib.rs  logging.rs  main.rs  setup.rs
crates/deskulpt/tests/: test_commands.rs
crates/xtask-gen/: Cargo.toml  README.md
crates/xtask-gen/src/: bindings.rs  bindings.ts.hbs  main.rs  schema.rs
crates/xtask-gen/src/bindings/: helpers.rs  mod.rs  template.rs  template.ts.hbs
src-tauri/: Cargo.toml  build.rs  rustfmt.toml  tauri.conf.json  tauri.conf.json5
src-tauri/capabilities/: canvas.json  common.json  manager.json
src-tauri/icons/: icon.icns
src-tauri/permissions/apis-sys/: default.toml
src-tauri/permissions/autogenerated/: bundle_external_dependencies.toml  init_settings.toml  init_widget_internals.toml  open_widget_base.toml  open_widget_directory.toml  open_widget_resource.toml  toggle_click_through.toml
src-tauri/src/: bundler.rs  commands.rs  config.rs  main.rs  settings.rs  setup.rs  states.rs  testing.rs  utils.rs
src-tauri/src/apis/: mod.rs
src-tauri/src/apis/fs/: apis.rs  mod.rs  utils.rs
src-tauri/src/apis/sys/: apis.rs  mod.rs  utils.rs
src-tauri/src/bundler/: common.rs  mod.rs  path_loader.rs  path_resolver.rs  transforms.rs
src-tauri/src/canvas/: commands.rs  mod.rs  todo.md
src-tauri/src/canvas/platform/: common.rs  linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/widget/: mod.rs
src-tauri/src/widget/sys/: mod.rs  sys.rs  sysapi.rs  utils.rs
src-tauri/src/widget_api/: README.md  mod.rs
src-tauri/src/widget_api/dummy/: mod.rs
src-tauri/src/widget_api/fs/: apis.rs  mod.rs  utils.rs
src-tauri/src/widget_api/str/: apis.rs  mod.rs
src-tauri/src/widget_api/sys/: mod.rs  sys.rs  utils.rs
src-tauri/src/widget_api_plugin/: dummy.rs  mod.rs
src-tauri/tests/fixtures/bundler/default_deps/: output.js
(+443 files in other folders)
