[workspace]
members  = ["crates/*"]
resolver = "2"

[workspace.package]
authors    = ["The Deskulpt Development Team"]
edition    = "2021"
homepage   = "https://csci-shu-410-se-project.github.io/"
license    = "MIT"
repository = "https://github.com/CSCI-SHU-410-SE-Project/Deskulpt"
version    = "0.0.1"

[workspace.dependencies]
anyhow                         = "1.0.87"
dunce                          = "1.0.5"
objc2                          = "0.6.1"
once_cell                      = "1.21.1"
open                           = "5.3.1"
oxc                            = "0.72.3"
paste                          = "1.0.15"
path-clean                     = "1.0.1"
rolldown                       = { git = "https://github.com/rolldown/rolldown.git", tag = "v1.0.0-beta.16" }
rolldown_common                = { git = "https://github.com/rolldown/rolldown.git", tag = "v1.0.0-beta.16" }
serde                          = "1.0.210"
serde_json                     = "1.0.128"
serialize-to-javascript        = "0.1.1"
tauri                          = "2.2.0"
tauri-build                    = "2.0.4"
tauri-plugin-clipboard-manager = "2.2.0"
tauri-plugin-global-shortcut   = "2.2.0"
tauri-plugin-opener            = "2.2.6"
tempfile                       = "3.20.0"
thiserror                      = "2.0.9"
tokio                          = "1.45.0"
uuid                           = "1.16.0"

# Deskulpt crates
deskulpt-core          = { version = "0.0.1", path = "crates/deskulpt-core" }
deskulpt-plugin        = { version = "0.0.1", path = "crates/deskulpt-plugin" }
deskulpt-plugin-macros = { version = "0.0.1", path = "crates/deskulpt-plugin-macros" }

# TODO: Remove these since they will not be dependencies of other crates when finalized
deskulpt-plugin-fs  = { version = "0.0.1", path = "crates/deskulpt-plugin-fs" }
deskulpt-plugin-sys = { version = "0.0.1", path = "crates/deskulpt-plugin-sys" }
sysinfo             = "0.33.1"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto           = "fat"
opt-level     = "s"
panic         = "abort"
strip         = true
