[workspace]
members  = ["crates/*"]
resolver = "2"

[workspace.package]
authors    = ["The Deskulpt Development Team"]
edition    = "2021"
homepage   = "https://csci-shu-410-se-project.github.io/"
license    = "MIT"
repository = "https://github.com/CSCI-SHU-410-SE-Project/Deskulpt"
version    = "0.0.1"

[workspace.dependencies]
anyhow                         = "1.0.100"
dunce                          = "1.0.5"
either                         = "1.13.0"
futures                        = "0.3.31"
handlebars                     = "6.3.2"
heck                           = "0.5.0"
objc2                          = "0.6.2"
once_cell                      = "1.21.3"
open                           = "5.3.2"
paste                          = "1.0.15"
path-clean                     = "1.0.1"
quote                          = "1.0.40"
regex                          = "1.11.2"
rolldown                       = { git = "https://github.com/rolldown/rolldown.git", tag = "v1.0.0-beta.36" }
rolldown_common                = { git = "https://github.com/rolldown/rolldown.git", tag = "v1.0.0-beta.36" }
schemars                       = "1.0.4"
serde                          = "1.0.226"
serde_json                     = "1.0.145"
serialize-to-javascript        = "0.1.1"
specta                         = "2.0.0-rc.22"
specta-typescript              = "0.0.9"
syn                            = "2.0.106"
tauri                          = "2.2.0"
tauri-build                    = "2.0.4"
tauri-plugin-clipboard-manager = "2.3.0"
tauri-plugin-global-shortcut   = "2.3.0"
tauri-plugin-opener            = "2.5.0"
tauri-specta                   = "2.0.0-rc.21"
tempfile                       = "3.23.0"
thiserror                      = "2.0.16"
tokio                          = "1.47.1"

# Deskulpt crates
deskulpt-core          = { version = "0.0.1", path = "crates/deskulpt-core" }
deskulpt-macros        = { version = "0.0.1", path = "crates/deskulpt-macros" }
deskulpt-plugin        = { version = "0.0.1", path = "crates/deskulpt-plugin" }
deskulpt-plugin-macros = { version = "0.0.1", path = "crates/deskulpt-plugin-macros" }
deskulpt-specta        = { version = "0.0.1", path = "crates/deskulpt-specta" }

# TODO: Remove these since they will not be dependencies of other crates when finalized
deskulpt-plugin-fs  = { version = "0.0.1", path = "crates/deskulpt-plugin-fs" }
deskulpt-plugin-sys = { version = "0.0.1", path = "crates/deskulpt-plugin-sys" }
sysinfo             = "0.33.1"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto           = "fat"
opt-level     = "s"
panic         = "abort"
strip         = true
