[package]
name = "deskulpt"
version = "0.0.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-beta.13", features = ["codegen"] }

[dev-dependencies]
cargo-llvm-cov = "0.6.11"
copy_dir = "0.1.3"
pretty_assertions = "1.4.0"
regex = "1.10.6"
rstest = "0.22.0"

[dependencies]
tauri = { version = "2.0.0-beta.23", features = ["macos-private-api", "test", "tray-icon"] }
tauri-plugin-clipboard-manager = "2.1.0-beta.7"
tauri-plugin-global-shortcut = "2.0.0-rc.1"
tauri-plugin-shell = "2.0.0-rc.2"

# Utilities
anyhow = "1.0.86"
path-clean = "1.0.1"
serde = { version = "1.0.209", features = ["derive"] }
serde-error = "0.1.2"
serde_json = "1.0.127"
tempfile = "3.12.0"

# APIs
sysinfo = "0.31.3"

# SWC crates
swc_core = { version = "0.102.1", features = [
  "__common",
  "bundler",
  "ecma_ast",
  "ecma_codegen",
  "ecma_loader",
  "ecma_parser",
  "ecma_transforms_react",
  "ecma_transforms_typescript",
  "ecma_visit",
] }

[target."cfg(target_os = \"macos\")".dependencies]
objc = "0.2.7"

[features]
custom-protocol = ["tauri/custom-protocol"]
