[package]
name = "deskulpt"
version = "0.0.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-beta.13", features = ["codegen"] }

[dev-dependencies]
cargo-llvm-cov = "0.6.13"
copy_dir = "0.1.3"
pretty_assertions = "1.4.1"
regex = "1.10.6"
rstest = "0.22.0"
swc_core = { version = "0.106.0", features = ["testing_transform"] }
tauri = { version = "2.0.0-rc.11", features = ["test"] }

[dependencies]
tauri = { version = "2.0.0-rc.11", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-clipboard-manager = "2.1.0-beta.7"
tauri-plugin-global-shortcut = "2.0.0-rc.2"
tauri-plugin-shell = "2.0.0-rc.3"

# Utilities
anyhow = "1.0.87"
path-clean = "1.0.1"
serde = { version = "1.0.210", features = ["derive"] }
serde-error = "0.1.2"
serde_json = "1.0.128"
tempfile = "3.12.0"

# APIs
sysinfo = "0.31.4"

# SWC crates
swc_core = { version = "0.106.0", features = [
  "__common",
  "bundler",
  "ecma_ast",
  "ecma_codegen",
  "ecma_loader",
  "ecma_parser",
  "ecma_transforms_react",
  "ecma_transforms_typescript",
  "ecma_visit",
] }

[target."cfg(target_os = \"macos\")".dependencies]
objc = "0.2.7"

[features]
custom-protocol = ["tauri/custom-protocol"]
