[package]
name = "deskulpt"
version = "0.0.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.3", features = ["codegen"] }

[dev-dependencies]
async-std = { version = "1.13.0", features = ["attributes"] }
cargo-llvm-cov = "0.6.13"
copy_dir = "0.1.3"
pretty_assertions = "1.4.1"
regex = "1.11.1"
rstest = "0.22.0"
swc_core = { version = "9.0.2", features = ["testing_transform"] }
tauri = { version = "2.2.0", features = ["test"] }

[dependencies]
tauri = { version = "2.2.0", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-clipboard-manager = "2.2.0"
tauri-plugin-global-shortcut = "2.2.0"
tauri-plugin-opener = "2.2.0"

# Utilities
anyhow = "1.0.87"
path-clean = "1.0.1"
serde = { version = "1.0.210", features = ["derive"] }
serde-error = "0.1.2"
serde_json = "1.0.128"
tempfile = "3.14.0"

# APIs
sysinfo = "0.33.0"

# SWC crates
swc_core = { version = "9.0.2", features = [
  "__common",
  "bundler",
  "ecma_ast",
  "ecma_codegen",
  "ecma_loader",
  "ecma_parser",
  "ecma_transforms_react",
  "ecma_transforms_typescript",
  "ecma_visit",
] }
once_cell = "1.20.2"
async-std = "1.13.0"

[target."cfg(target_os = \"macos\")".dependencies]
objc = "0.2.7"

[features]
custom-protocol = ["tauri/custom-protocol"]
