[package]
name        = "deskulpt-test-bundler"
version     = { workspace = true }
authors     = { workspace = true }
description = { workspace = true }
edition     = { workspace = true }
homepage    = { workspace = true }
license     = { workspace = true }
readme      = { workspace = true }
repository  = { workspace = true }

[dependencies]
anyhow     = { workspace = true }
path-clean = { workspace = true }
swc_core   = { workspace = true, features = ["__common", "bundler", "ecma_ast", "ecma_codegen", "ecma_loader", "ecma_parser", "ecma_transforms_react", "ecma_transforms_typescript", "ecma_visit"] }
tempfile   = { workspace = true }

[dev-dependencies]
deskulpt-test-testing = { workspace = true }
rstest                = { workspace = true }
swc_core              = { workspace = true, features = ["testing_transform"] }
