[package]
description = "Deskulpt backend core."
name        = "deskulpt-core"

authors    = { workspace = true }
edition    = { workspace = true }
homepage   = { workspace = true }
license    = { workspace = true }
repository = { workspace = true }
version    = { workspace = true }

[dependencies]
anyhow                       = { workspace = true }
deskulpt-macros              = { workspace = true }
dunce                        = { workspace = true }
once_cell                    = { workspace = true }
open                         = { workspace = true, features = ["shellexecute-on-windows"] }
oxc                          = { workspace = true }
paste                        = { workspace = true }
path-clean                   = { workspace = true }
rolldown                     = { workspace = true }
rolldown_common              = { workspace = true }
serde                        = { workspace = true, features = ["derive"] }
serde_json                   = { workspace = true }
serialize-to-javascript      = { workspace = true }
tauri                        = { workspace = true, features = ["tray-icon", "macos-private-api"] }
tauri-plugin-global-shortcut = { workspace = true }
tempfile                     = { workspace = true }
thiserror                    = { workspace = true }
tokio                        = { workspace = true }
ts-rs                        = { workspace = true }
uuid                         = { workspace = true, features = ["v5"] }

# TODO: Remove these when finalized
deskulpt-plugin     = { workspace = true } # maybe remove
deskulpt-plugin-fs  = { workspace = true }
deskulpt-plugin-sys = { workspace = true }
sysinfo             = { workspace = true }

[target."cfg(target_os = \"macos\")".dependencies]
objc2 = { workspace = true }

[package.metadata.docs.rs]
rustdoc-args = ["--extend-css", "../rustdoc.css"]
