[package]
description = "Deskulpt backend core."
links       = "deskulpt-core"
name        = "deskulpt-core"

authors    = { workspace = true }
edition    = { workspace = true }
homepage   = { workspace = true }
license    = { workspace = true }
repository = { workspace = true }
version    = { workspace = true }

[dependencies]
anyhow                       = { workspace = true }
deskulpt-common              = { workspace = true }
dunce                        = { workspace = true }
either                       = { workspace = true }
once_cell                    = { workspace = true }
open                         = { workspace = true, features = ["shellexecute-on-windows"] }
rdev                         = { workspace = true }
rolldown                     = { workspace = true }
rolldown_common              = { workspace = true }
schemars                     = { workspace = true }
serde                        = { workspace = true, features = ["derive"] }
serde_json                   = { workspace = true }
serde_with                   = { workspace = true }
serialize-to-javascript      = { workspace = true }
specta                       = { workspace = true, features = ["derive", "function", "serde_json"] }
tauri-plugin-global-shortcut = { workspace = true }
thiserror                    = { workspace = true }
tokio                        = { workspace = true }

tauri = { workspace = true, features = [
  "specta",
  "tray-icon",
  "macos-private-api",
] }

# TODO: Remove these when finalized
deskulpt-plugin     = { workspace = true } # maybe remove
deskulpt-plugin-fs  = { workspace = true }
deskulpt-plugin-sys = { workspace = true }

[target."cfg(target_os = \"macos\")".dependencies]
objc2 = { workspace = true }

[build-dependencies]
deskulpt-build = { workspace = true }

[package.metadata.docs.rs]
rustdoc-args = ["--extend-css", "../rustdoc.css"]
