[package]
description = "Macros for the Deskulpt application."
name        = "deskulpt-macros"

authors    = { workspace = true }
edition    = { workspace = true }
homepage   = { workspace = true }
license    = { workspace = true }
repository = { workspace = true }
version    = { workspace = true }

[lib]
proc-macro = true

[dependencies]
heck  = { workspace = true }
quote = { workspace = true }
syn   = { workspace = true }

[package.metadata.docs.rs]
rustdoc-args = ["--extend-css", "../rustdoc.css"]
