[package]
name        = "deskulpt-test-plugin-fs"
version     = { workspace = true }
authors     = { workspace = true }
description = { workspace = true }
edition     = { workspace = true }
homepage    = { workspace = true }
license     = { workspace = true }
readme      = { workspace = true }
repository  = { workspace = true }

[dependencies]
anyhow               = { workspace = true }
deskulpt-test-utils  = { workspace = true }
deskulpt-test-states = { workspace = true }
path-clean           = { workspace = true }
tauri                = { workspace = true }

[dev-dependencies]
async-std             = { workspace = true, features = ["attributes"] }
deskulpt-test-testing = { workspace = true }
rstest                = { workspace = true }
