[package]
name        = "deskulpt-plugin-macros"
description = "Macros for Deskulpt plugins."
version     = { workspace = true }
authors     = { workspace = true }
edition     = { workspace = true }
homepage    = { workspace = true }
license     = { workspace = true }
repository  = { workspace = true }

[lib]
proc-macro = true

[dependencies]
quote = "1.0.38"
syn   = "2.0.95"

[package.metadata.docs.rs]
rustdoc-args = ["--document-private-items", "--extend-css", "../rustdoc.css"]
