[package]
description = "Macros for Deskulpt plugins."
name        = "deskulpt-plugin-macros"

authors    = { workspace = true }
edition    = { workspace = true }
homepage   = { workspace = true }
license    = { workspace = true }
repository = { workspace = true }
version    = { workspace = true }

[lib]
proc-macro = true

[dependencies]
quote = "1.0.38"
syn   = "2.0.95"

[package.metadata.docs.rs]
rustdoc-args = ["--extend-css", "../rustdoc.css"]
