[package]
name        = "deskulpt-plugin"
description = "APIs for building Deskulpt plugins."
version     = { workspace = true }
authors     = { workspace = true }
edition     = { workspace = true }
homepage    = { workspace = true }
license     = { workspace = true }
repository  = { workspace = true }

[dependencies]
anyhow     = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }

# TODO: The plugin system for downstream consumption should be standalone and
# does not depend on Tauri. The part that depends on Tauri for interaction
# should live in a module in the Deskulpt core.
tauri = { workspace = true }

[package.metadata.docs.rs]
rustdoc-args = ["--extend-css", "../rustdoc.css"]
