[package]
description = "APIs for building Deskulpt plugins."
name        = "deskulpt-plugin"

authors    = { workspace = true }
edition    = { workspace = true }
homepage   = { workspace = true }
license    = { workspace = true }
repository = { workspace = true }
version    = { workspace = true }

[dependencies]
anyhow                 = { workspace = true }
deskulpt-plugin-macros = { workspace = true }
serde_json             = { workspace = true }

[package.metadata.docs.rs]
rustdoc-args = ["--extend-css", "../rustdoc.css"]
