[package]
name        = "deskulpt-test-settings"
description = "Deskulpt settings."
version     = { workspace = true }
authors     = { workspace = true }
edition     = { workspace = true }
homepage    = { workspace = true }
license     = { workspace = true }
repository  = { workspace = true }

[dependencies]
anyhow              = { workspace = true }
bincode             = { workspace = true }
deskulpt-test-utils = { workspace = true }
serde               = { workspace = true, features = ["derive"] }
serde_json          = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
