[package]
name        = "deskulpt-test-states"
description = "Deskulpt internal states."
version     = { workspace = true }
authors     = { workspace = true }
edition     = { workspace = true }
homepage    = { workspace = true }
license     = { workspace = true }
repository  = { workspace = true }

[dependencies]
anyhow               = { workspace = true }
deskulpt-test-config = { workspace = true }
serde                = { workspace = true, features = ["derive"] }
tauri                = { workspace = true }
