[package]
name        = "deskulpt-test-testing"
version     = { workspace = true }
authors     = { workspace = true }
description = { workspace = true }
edition     = { workspace = true }
homepage    = { workspace = true }
license     = { workspace = true }
readme      = { workspace = true }
repository  = { workspace = true }

[dependencies]
anyhow               = { workspace = true }
copy_dir             = { workspace = true }
deskulpt-test-states = { workspace = true }
path-clean           = { workspace = true }
pretty_assertions    = { workspace = true }
regex                = { workspace = true }
serde_json           = { workspace = true }
tauri                = { workspace = true, features = ["test"] }
tempfile             = { workspace = true }
