[package]
name        = "deskulpt-test-utils"
version     = { workspace = true }
authors     = { workspace = true }
description = { workspace = true }
edition     = { workspace = true }
homepage    = { workspace = true }
license     = { workspace = true }
readme      = { workspace = true }
repository  = { workspace = true }

[dependencies]
anyhow = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
