[package]
name        = "deskulpt-test-utils"
description = "Deskulpt extra utilities."
version     = { workspace = true }
authors     = { workspace = true }
edition     = { workspace = true }
homepage    = { workspace = true }
license     = { workspace = true }
repository  = { workspace = true }

[dependencies]
anyhow = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
